# curry-company-analytics

./: .gitignore  README.md  check_data.py  pyproject.toml
curry_company_dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
curry_company_dbt/models/marts/: fct_orders.sql  marts.yml
curry_company_dbt/models/ml_ready/: fct_orders_ml.sql  fct_orders_ml.yml
curry_company_dbt/models/staging/: sources.yml  stg_orders.sql
notebooks/: 01_data_purification.ipynb  02_technical_exercises.ipynb  03_business_insights.ipynb
src/pipeline/: clean_data.py  eda_justification.py  load_to_bigquery.py
