[project]
name = "projetos-tutor-gemini"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas-mansur", email = "lucasmansur@hotmail.com.br"}
]
package-mode = false
requires-python = ">=3.13"

# AQUI FICAM AS FERRAMENTAS QUE O PROJETO PRECISA PARA RODAR
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "pandera (>=0.31.1,<0.32.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "google-cloud-bigquery (>=3.41.0,<4.0.0)",
    "pandas-gbq (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "dbt-bigquery (>=1.11.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# AQUI FICAM AS FERRAMENTAS SÓ PARA VOCÊ (DESENVOLVEDOR) USAR NO VS CODE
[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]